--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,6 @@ after_deploy:
   - git clone --depth 1 --branch gh-pages https://$GITHUB_TOKEN@github.com/sitcon-tw/camp
   - cd camp
   - git submodule init
-  - git submodule update
-  - cd 2019
-  - git checkout gh-pages
-  - git pull origin gh-pages
-  - cd ../
+  - git submodule update --remote
   - git commit -a -m "Update submodule 2019"
-  - git push -f --quiet
+  - git push -f
